--- a/frontend/drnk-jamz/src/App.css
+++ b/frontend/drnk-jamz/src/App.css
@@ -252,3 +252,14 @@ h3 {
   margin-right:0;
   justify-content: right;
 }
+
+#spotify-link {
+  background:none!important;
+  color:rgb(0,196,85) !important;
+  border:none; 
+  padding:0!important;
+  font: inherit;
+  /*border is optional*/
+  border-bottom:1px solid #444; 
+  cursor: pointer;
+}
